--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ I ported all the needed changes for Defcoin compatibility over.</p>
         </section>
 
         <aside id="sidebar">
-          <img src="http://i.imgur.com/QZlZji2.png" style="position: relative;left: 17%;" />
+          <img src="http://jjculber.github.io/defcoin-wallet/defcoin128.png" style="position: relative;left: 17%;" />
           <a href="https://github.com/jjculber/defcoin-wallet/releases/download/v1.07/wallet-defcoin.apk" class="button">
             <small>Download</small>
               .apk file
